src/objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteLineHelp</customHelpPage>
    <description>Individual line item on a quote.</description>
    <fields>
        <fullName>Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Seats__c</fullName>
        <description>Additional Seats for Serviced Sales</description>
        <inlineHelpText>Additional Seats for Serviced Sales</inlineHelpText>
        <label>Additional Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Services_Total__c</fullName>
        <label>Additional Services Total (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <description>Amount Remaning field for Fit-out by Supplier</description>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_of_Workstations__c</fullName>
        <label>Amount of Workstations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Average_Without_Discount__c</fullName>
        <label>Annual Average Without Discount (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Average__c</fullName>
        <label>Annual Average (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Avg_wo_Discount_per_Space__c</fullName>
        <label>Annual Avg w/o Discount per Space (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Cost__c</fullName>
        <label>Annual Cost (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Price_per_Sq_Ft__c</fullName>
        <label>Annual Price per Sq Ft (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Break_Date__c</fullName>
        <label>Break Date</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Break_Penalty__c</fullName>
        <label>Break Penalty (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Building_Insurance_per_sq_ft_Annual__c</fullName>
        <description>Building Insurance per sq ft Annual</description>
        <label>Building Insurance per sq ft Annual</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bundle_Code__c</fullName>
        <label>Bundle Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cap_Amount__c</fullName>
        <formula>Inventory__r.Size_sq_ft__c  *  Cap_Per_sq_ft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cap Amount (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Expiry_Month__c</fullName>
        <label>Cap Expiry Month</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Per_sq_ft__c</fullName>
        <label>Cap Per sq. ft. (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Net_Total__c</fullName>
        <label>Capex Net Total (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Allowances__c</fullName>
        <label>Capital Allowances</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Parking_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Parking Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Quote Lines (Car Parking Inventory)</relationshipLabel>
        <relationshipName>Quote_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <label>Company Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparable_ID_for_Calculator__c</fullName>
        <label>Comparable ID for Calculator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conducted_By__c</fullName>
        <label>Conducted By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_per_Sq_Ft_Annual__c</fullName>
        <description>Cost per Sq. Ft for Charges in Conventional - Service, Insurance, Estate.</description>
        <label>Cost per Sq. Ft. Annual</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_or_Payment__c</fullName>
        <label>Credit or Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Price__c</fullName>
        <label>Customer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DTC_Serv_CF__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Discount Term Certain Comparasion field. Is used to store the difference between Stepped Rent Start Date and Break Date.</description>
        <inlineHelpText>Discount Term Certain Comparasion field. Is used to store the difference between Stepped Rent Start Date and Break Date.</inlineHelpText>
        <label>DTC Serv CF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTC_Serv_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Discount Term Certain Term (duration) field. It is used to save the resulting duration of Stepped Rent period, to be included into Discount Term Certain.</description>
        <inlineHelpText>Discount Term Certain Term (duration) field. It is used to save the resulting duration of Stepped Rent period, to be included into Discount Term Certain.</inlineHelpText>
        <label>DTC Serv Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Balance_Due__c</fullName>
        <label>Date Balance Due</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completion of Lease</fullName>
                </value>
                <value>
                    <fullName>Exchange of Contracts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_Comparison__c</fullName>
        <label>Date for Comparison</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Already_Held__c</fullName>
        <label>Deposit Already Held (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Monthly_Average__c</fullName>
        <label>Deposit Monthly Average (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Payment__c</fullName>
        <description>Deposit Payment on Line Item.</description>
        <formula>SBQQ__ListTotal__c - Line_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Deposit Payment on Line Item.</inlineHelpText>
        <label>Deposit Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Q_L__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Deposit % to be applied to this Quote Line.</description>
        <inlineHelpText>Deposit % to be applied to this Quote Line.</inlineHelpText>
        <label>Deposit %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_Certain__c</fullName>
        <label>Discount Amount Certain</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Full_Term_Percent__c</fullName>
        <label>Discount Full Term (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Full_Term__c</fullName>
        <label>Discount Full Term (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage_per_Space__c</fullName>
        <label>Discount per Space (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Term_Certain_Percent__c</fullName>
        <label>Discount Term Certain (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Term_Certain_Rollup__c</fullName>
        <label>Discount Term Certain Rollup (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Term_Certain__c</fullName>
        <label>Discount Term Certain (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Total__c</fullName>
        <label>Discount Total (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Break_Date__c</fullName>
        <label>Earliest Break Date</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Term__c</fullName>
        <label>End Term</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estate_Charge_per_sq_ft_Annual__c</fullName>
        <description>Estate Charge per sq ft Annual</description>
        <label>Estate Charge per sq ft Annual</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed__c</fullName>
        <label>% Fixed</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Floor_Number__c</fullName>
        <label>Floor Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantor_Name__c</fullName>
        <label>Guarantor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Number__c</fullName>
        <label>Guarantor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Half_Rent_Annualised_Amount__c</fullName>
        <formula>IF(
  AND (
    SBQQ__ProductCode__c == &apos;HalfRent&apos;,
    NOT(ISBLANK(SBQQ__RequiredBy__c)),
    NOT(ISBLANK(SBQQ__RequiredBy__r.Net_Total__c)),
    NOT(ISBLANK(SBQQ__RequiredBy__r.Term__c )),
    SBQQ__RequiredBy__r.Term__c &gt; 0
  ),
    ((SBQQ__RequiredBy__r.Net_Total__c / SBQQ__RequiredBy__r.Term__c) * 12 ) / 2,
    NULL
)</formula>
        <label>Half Rent Annualised Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Half_Rent_Annualised_text__c</fullName>
        <label>Half Rent Annualised Amount (Words)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Headline_Item_Subscription_Term__c</fullName>
        <label>Headline Item Subscription Term</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indicative_Start_Date__c</fullName>
        <label>Indicative Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Cost_per_space_Total__c</fullName>
        <label>Inventory Cost per space Total (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Cost_per_space__c</fullName>
        <label>Inventory Cost per space (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Cost_per_space_per_month__c</fullName>
        <label>Inventory Cost per space</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Estate_Charge_Total__c</fullName>
        <label>Inventory Estate Charge Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Ground_Rent_Charge_Total__c</fullName>
        <label>Inventory Ground Rent Charge Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Insurance_Charge_Total__c</fullName>
        <label>Inventory Insurance Charge Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Rent_Total__c</fullName>
        <label>Inventory Rent Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Rent_per_workstation__c</fullName>
        <label>Inventory Rent per workstation</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Rent_per_workstation_per_month__c</fullName>
        <label>Inventory Rent per workstation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Service_Charge_Total__c</fullName>
        <label>Inventory Service Charge Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsConcession__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Concession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Manual_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is used to determine whether or not the Deposit Line&apos;s amount is entered manually. Is set by Price Rules</description>
        <inlineHelpText>Is used to determine whether or not the Deposit Line&apos;s amount is entered manually. Is set by Price Rules</inlineHelpText>
        <label>Is Manual Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date__c</fullName>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Fees_Cap__c</fullName>
        <label>Legal Fees Cap (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_of_Service__c</fullName>
        <description>Level of Service.</description>
        <inlineHelpText>Level of Service.</inlineHelpText>
        <label>Level of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licence_Start_Date__c</fullName>
        <description>Licence Start Date for Serviced Sales</description>
        <inlineHelpText>Licence Start Date for Serviced Sales</inlineHelpText>
        <label>Licence Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Total_Price__c</fullName>
        <description>Line Monthly Payment</description>
        <formula>Monthly_Payment_Obsolete__c *  SBQQ__SubscriptionTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Line Monthly Payment</inlineHelpText>
        <label>Line Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price_Cost_Per_Handset_PCM__c</fullName>
        <label>List Price Cost Per Handset PCM (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>Is used for CPQ data transfer from Product Option, do not delete!</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maintained_By__c</fullName>
        <label>Maintained By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Notice__c</fullName>
        <label>Maximum Notice</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Notice__c</fullName>
        <label>Minimum Notice</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Average_Without_Discount__c</fullName>
        <label>Monthly Average Without Discount (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Average__c</fullName>
        <label>Monthly Average (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Avg_wo_Discount_per_Space__c</fullName>
        <label>Monthly Avg w/o Discount per Space (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Cost__c</fullName>
        <label>Monthly Cost (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Cost_after_Discount__c</fullName>
        <label>Monthly Cost after Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Obsolete__c</fullName>
        <description>Price to be paid each month.</description>
        <formula>IF(
    ISPICKVAL(Level_of_Service__c, &apos;High&apos;),
     (SBQQ__ListPrice__c - (Deposit_Q_L__c * SBQQ__ListPrice__c) * 1.5)*(1-SBQQ__Discount__c),
    IF(
        ISPICKVAL(Level_of_Service__c, &apos;Medium&apos;),
        (SBQQ__ListPrice__c - ( Deposit_Q_L__c * SBQQ__ListPrice__c) * 1.2)*(1-SBQQ__Discount__c),
        (SBQQ__ListPrice__c - ( Deposit_Q_L__c * SBQQ__ListPrice__c) * 1.5)*(1-SBQQ__Discount__c)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price to be paid each month.</inlineHelpText>
        <label>Monthly Payment Obsolete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Total__c</fullName>
        <description>Monthly Total (£) for Stepped Rent Product.</description>
        <inlineHelpText>Monthly Total (£) for Stepped Rent Product.</inlineHelpText>
        <label>Monthly Total (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Subtotal__c</fullName>
        <label>Net Subtotal (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <label>Net Total (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Annual_Average__c</fullName>
        <label>New Annual Average (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Annual_Average_per_Space__c</fullName>
        <label>New Annual Average per Space (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Monthly_Average__c</fullName>
        <label>New Monthly Average (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Monthly_Average_per_Space__c</fullName>
        <label>New Monthly Average per Space (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Billable_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Billable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Hours__c</fullName>
        <description>Number of Hours for Meeting Room Use</description>
        <inlineHelpText>Number of Hours for Meeting Room Use</inlineHelpText>
        <label>Number of Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rental_Months__c</fullName>
        <label>Number of Rental Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payable_by_customer__c</fullName>
        <label>Payable by customer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage_Upfront__c</fullName>
        <label>Percentage Upfront (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Of_One__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Power Of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_emption_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-emption Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Per_sq_ft__c</fullName>
        <label>Monthly Price Per sq. ft. (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Rent_Payed__c</fullName>
        <description>Principal Rent Paid for Customer Break Product Option</description>
        <inlineHelpText>Principal Rent Paid for Customer Break Product Option</inlineHelpText>
        <label>Principal Rent Paid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_for_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product for Filter</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Lines (Product Lookup)</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Management_Fee__c</fullName>
        <label>Project Management Fee (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <label>Property Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Quote Lines (Property)</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_for_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property for Filter</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quanta__c</fullName>
        <label>Quanta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>SerLic</fullName>
                </value>
                <value>
                    <fullName>DedLic</fullName>
                </value>
                <value>
                    <fullName>DeskLic</fullName>
                </value>
                <value>
                    <fullName>suite</fullName>
                </value>
                <value>
                    <fullName>Car space</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>£</fullName>
                </value>
                <value>
                    <fullName>sqft</fullName>
                </value>
                <value>
                    <fullName>Qty</fullName>
                </value>
                <value>
                    <fullName>Desk</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Property__c</fullName>
        <label>Quote Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New_deal</fullName>
                    <label>New Deal</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Surrender_and_regrant</fullName>
                    <label>Surrender and regrant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Address__c</fullName>
        <label>Registered Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rent_Per_Workstation__c</fullName>
        <label>Monthly Rent Per Workstation (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
</CustomObject>